--- a/style1.css
+++ b/style1.css
@@ -12,6 +12,7 @@ text-align: center;
     background-color: chartreuse;
     margin: 40px;
     padding-right: 60px;
+    display: inline-block;
     
 
 }
